2006-05-30 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.19
	* info/patches/maintenance_patches/patch-2.6.16.19: added

2006-05-30 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-rc5-mm1
	* info/patches/mm_patches/2.6.17-rc5-mm1: added

2006-05-26 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.18
	* info/patches/maintenance_patches/patch-2.6.16.18: added

2006-05-25 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.17-rc5
	* info/patches/PRE_2_6/patch-2.6.17-rc5: added

2006-05-25 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-rc4-mm3
	* info/patches/mm_patches/2.6.17-rc4-mm3: added

2006-05-21 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck11
	* info/patches/ck_patches/patch-2.6.16-ck11: added

2006-05-21 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks11
	* info/patches/ck_server_patches/patch-2.6.16-cks11: added

2006-05-20 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.17
	* info/patches/maintenance_patches/patch-2.6.16.17: added

2006-05-20 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-rc4-mm2
	* info/patches/mm_patches/2.6.17-rc4-mm2: added

2006-05-19 David Brown <dmlb2000@gmail.com>
        * info/patches/gensplash_patches/fbsplash-0.9.2-r5-2.6.16.patch: added

2006-05-19 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rt23
	* info/patches/realtime_patches/patch-2.6.16-rt23: added

2006-05-15 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-rc4-mm1
	* info/patches/mm_patches/2.6.17-rc4-mm1: added

2006-05-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.17-rc4
	* info/patches/PRE_2_6/patch-2.6.17-rc4: added

2006-05-10 David Brown <dmlb2000@gmail.com>