@@ -1,4 +1,7 @@
 2006-05-30 David Brown <dmlb2000@gmail.com>
+	* info/patches/tarpit_patches/tarpit-for-2.6.16.patch: added
+
+2006-05-30 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.16.19
 	* info/patches/maintenance_patches/patch-2.6.16.19: added
 
